<resources>
    <string name="app_name">Phone Bill</string>
    <string name="action_readme">README</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_readme">Readme</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Phone Bill -->
    <string name="customer_name">Customer Name</string>
    <string name="caller">Caller Phone Number</string>
    <string name="add_phonebill">Add Phone Bill</string>
    <string name="callee">Callee Phone Number</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="print_phone_bill">Print Phone Bill</string>
    <string name="search_phone_bill">Search Phone Bill</string>
    <string name="result_customer_name">Customer Name: %s</string>
    <string name="no_phone_bills">No Phone Bills Found</string>
    <string name="duration">%s total length %d minutes</string>
    <string name="durationSingular">%s total length %d minute</string>
    <string name="readme">
        Usage:\n\n
        CS410J Project 5: A Small Device Application for a Phone Bill\n
        Forbes Miyasato\n\n

        This Phone Bill application supports creating phone bills, adding phone calls,
        printing a phone bill and its calls, and search for calls.\n\n

        Format for fields:\n\n
        Start Time&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;MM/dd/yyyy hh:mm am/pm\n
        End Time&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;MM/dd/yyyy hh:mm am/pm\n
        Caller Number&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;nnn-nnn-nnnn\n
        Callee Number&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;nnn-nnn-nnnn\n
        \n\n\n
        Credits:\n
        DINARDI, G. “Phone Bill Featured Image”. How to Stop Overpaying Your Business Phone Bill,
        5 Nov. 2019,
        https://storage.googleapis.com/nextivawebsites-wordpressfiles-voip/var/www/virtual/nextiva.com/voip/2019/10/phone-bill-featured-image.png.
    </string>
    <string name="phone">Phone</string>
    <string name="bill">Bill App</string>
    <string name="phone_bill_image">Phone Bill Image</string>
    <string name="forbes_miyasato">Forbes Miyasato</string>
</resources>
